    a scaling;  and the image is at (0, 0) and size (1, 1).
    This allows for ...

7.  Added animation support for rastergrob grobs.

8.  Added animation support for xspline grobs.

    Note that closed xsplines are unlikely to animate smoothly
    (because the result is an animated <path> with a variable 
     number of operations).


Changes from 0.7-0 to 0.8-0
===========================

1.  Started rounding all numeric values to 2 dp (in SVG output).

2.  Added "animValue" and "animUnit" classes to somewhat formalise
    the specification of animation values for attributes.

    Coercion methods are defined so that animation values can be
    specified as vectors, units, matrices, or lists (of units).

3.  Removed 'id' argument from grid.animate().

4.  Added 'begin' argument to grid.animate().

5.  Added "animation" vignette, which describes how to specify
    animation values for grid.animate().

6.  Named top-level gTree "gridSVG" (and therefore <g id="gridSVG">).

7.  Added 'inline' argument to grid.script().

8.  Added 'group' argument to grid.garnish() so that attributes
    can be applied EITHER to the parent <g> (the default) 
    OR to the individual child elements.

9.  Changed conversion of graphical parameters.  

    Instead of creating a single 'style' attribute in each element,
    now create individual SVG presentation attributes, like 'fill'
    and 'fill-opacity'.

    Also, ONLY record explicit 'gp' settings, rather than ALWAYS
    recording ALL current settings for ALL elements.

10. Modified grid.garnish() so that can garnish same grob multiple   
    times (without overwriting previous garnish).

11. Modified grid.animate() so that can animate same grob multiple
    times (without overwriting previous animation).

12. Added 'group' argument to grid.animate() so that animation
    can apply EITHER to the individual child elements (the default)
    OR to the parent <g>.

13. Added vignette on extending the 'gridSVG' package.
