@@ -299,6 +299,7 @@ setClass("svgDevice",
          representation("graphicsDevice",
                         res="numeric",
                         attrs="list",
+                        links="character",
                         # Object created by svgDevice() in svg.R
                         # has no S4 class yet
                         dev="ANY"))
@@ -337,21 +338,21 @@ setMethod("devArrow", signature(device="svgDevice"),
 setMethod("devLines", signature(device="svgDevice"),
           function(lines, gp, device) {
             svgLines(lines$x, lines$y, lines$name, lines$arrow,
-                     device@attrs,
+                     device@attrs, device@links,
                      devParToSVGStyle(gp, device), device@dev)
           })
 
 setMethod("devPolygon", signature(device="svgDevice"),
           function(polygon, gp, device) {
             svgPolygon(polygon$x, polygon$y, polygon$name,
-                       device@attrs,
+                       device@attrs, device@links,
                        devParToSVGStyle(gp, device), device@dev)
           })
 
 setMethod("devPath", signature(device="svgDevice"),
           function(path, gp, device) {
             svgPath(path$x, path$y, path$rule, path$name,
-                    device@attrs,
+                    device@attrs, device@links,
                     devParToSVGStyle(gp, device), device@dev)
           })
 
@@ -359,14 +360,14 @@ setMethod("devRaster", signature(device="svgDevice"),
           function(raster, gp, device) {
             svgRaster(raster$x, raster$y, raster$width, raster$height,
                       raster$name, raster$just, raster$vjust, raster$hjust,
-                      listToSVGAttrib(raster$attributes),
+                      listToSVGAttrib(raster$attributes), device@links,
                       devParToSVGStyle(gp, device), device@dev)
           })
 
 setMethod("devRect", signature(device="svgDevice"),
           function(rect, gp, device) {
             svgRect(rect$x, rect$y, rect$width, rect$height, rect$name,
-                    device@attrs,
+                    device@attrs, device@links,
                     devParToSVGStyle(gp, device), device@dev)
           })
 
@@ -386,14 +387,14 @@ setMethod("devText", signature(device="svgDevice"),
                     text$width, text$height, text$ascent, text$descent,
                     text$lineheight, text$charheight, text$fontheight,
                     text$fontfamily, text$fontface, text$name,
-                    device@attrs,
+                    device@attrs, device@links,
                     devParToSVGStyle(gp, device), device@dev)
           })
 
 setMethod("devCircle", signature(device="svgDevice"),
           function(circle, gp, device) {
             svgCircle(circle$x, circle$y, circle$r, circle$name,
-                      device@attrs,
+                      device@attrs, device@links,
                       devParToSVGStyle(gp, device), device@dev)
           })
 
@@ -410,13 +411,14 @@ setMethod("devStartGroup", signature(device="svgDevice"),
 
             svgStartGroup(group$name, clip=clip,
                           attributes=device@attrs,
+                          links=device@links,
                           style=devParToSVGStyle(gp, device),
                           svgdev=device@dev)
           })
 
 setMethod("devEndGroup", signature(device="svgDevice"),
-          function(device) {
-            svgEndGroup(device@dev)
+          function(name, device) {
+              svgEndGroup(name, device@links, device@dev)
           })
 
 setMethod("devClose", signature(device="svgDevice"),
