@@ -33,6 +33,8 @@ Changes from 0.8-0 to 0.9-0
     (because the result is an animated <path> with a variable 
      number of operations).
 
+9.  Added 'group' argument for grid.hyperlink().
+
 
 Changes from 0.7-0 to 0.8-0
 ===========================
